--- a/src/App.css
+++ b/src/App.css
@@ -18,9 +18,9 @@
 	position: absolute;
 	top: 0;
 	left: -200%;
-	width: 300%;
+	width: 250%;
 	height: 100%;
-	background: linear-gradient(to right, rgba(0, 0, 0, 1),rgba(0, 0, 0, 1),rgba(0, 0, 0, 1),rgba(0, 0, 0, 1),rgba(0, 0, 0, 1), rgba(0, 0, 0, 1),transparent,rgba(0, 0, 0, 1),rgba(0, 0, 0, 1),rgba(0, 0, 0, 1));
+	background: linear-gradient(to right, rgba(0, 0, 0, 1),rgba(0, 0, 0, 1),rgba(0, 0, 0, 1),rgba(0, 0, 0, 1),rgba(0, 0, 0, 1),rgba(0, 0, 0, 1),rgba(0, 0, 0, 1),transparent,rgba(0, 0, 0, 1),rgba(0, 0, 0, 1),rgba(0, 0, 0, 1),rgba(0, 0, 0, 1));
 	z-index: 2;
 	animation: move-light 5s linear infinite;
 }
@@ -28,15 +28,15 @@
 
 @keyframes move-light {
 	0% {
-		left: -200%;
+		left: -150%;
 	}
 
 	50% {
-		left: -100%;
+		left: -75%;
 	}
 
 	100% {
-		left: -200%;
+		left: -150%;
 	}
 }
 
